<resources>
    <string name="app_name">Calculator</string>
    <string name="zeroButton">0</string>
    <string name="oneButton">1</string>
    <string name="twoButton">2</string>
    <string name="threeButton">3</string>
    <string name="fourButton">4</string>
    <string name="fiveButton">5</string>
    <string name="sixButton">6</string>
    <string name="sevenButton">7</string>
    <string name="eigthButton">8</string>
    <string name="nineButton">9</string>
    <string name="plusButton">+</string>
    <string name="minusButton">-</string>
    <string name="sinButton">sin</string>
    <string name="cosButton">cos</string>
    <string name="tgButton">tg</string>
    <string name="ctgButton">ctg</string>
    <string name="multiplicationButton">*</string>
    <string name="equalButton">=</string>
    <string name="clearButton">C</string>
    <string name="oppositeButton">1/X</string>
    <string name="exponentButton">X^N</string>
    <string name="signButton">+/-</string>
    <string name="dotButton">.</string>
    <string name="squareButton">√</string>
    <string name="divisionButton">÷</string>
    <string name="changeButton">ch</string>
    <string name="xorButton">xor</string>
    <string name="orButton">or</string>
    <string name="notButton">not</string>
    <string name="andButton">and</string>

</resources>
