<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus.myapplication.StartActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="360dp"
        android:layout_height="181dp"
        android:textSize="25dp"
        />

    <Button
        android:id="@+id/oneButton"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="91dp"
        android:text="@string/oneButton"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="181dp" />

    <Button
        android:id="@+id/twoButton"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="91dp"
        android:text="@string/twoButton"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="181dp" />

    <Button
        android:id="@+id/cosButton"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"

        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="174dp"
        android:text="@string/cosButton" />


    <Button
        android:id="@+id/xorButton"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"

        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="174dp"
        android:enabled="false"
        android:visibility="invisible"
        android:text="@string/xorButton" />
    <Button
        android:id="@+id/eightButton"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginBottom="117dp"
        android:text="@string/eigthButton" />

    <Button
        android:id="@+id/minusButton"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="82dp"
        android:layout_marginRight="82dp"
        android:layout_marginBottom="174dp"
        android:text="@string/minusButton" />

    <Button
        android:id="@+id/multiplicationButton"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:layout_marginBottom="117dp"
        android:text="@string/multiplicationButton" />

    <Button
        android:id="@+id/ctgButton"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="283dp"
        android:layout_marginLeft="283dp"
        android:layout_marginBottom="117dp"
        android:text="@string/ctgButton" />

    <Button
        android:id="@+id/notButton"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="283dp"
        android:layout_marginLeft="283dp"
        android:layout_marginBottom="117dp"
        android:enabled="false"
        android:visibility="invisible"
        android:text="@string/notButton" />

    <Button
        android:id="@+id/zeroButton"
        android:layout_width="205dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginBottom="57dp"
        android:text="@string/zeroButton" />

    <Button
        android:id="@+id/equalButton"
        android:layout_width="205dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="0dp"
        android:text="@string/equalButton" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="211dp"
        android:text="@string/clearButton" />

    <Button
        android:id="@+id/exponentButton"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="209dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/exponentButton" />

    <Button
        android:id="@+id/dotButton"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="211dp"
        android:text="@string/dotButton" />

    <Button
        android:id="@+id/signButton"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="210dp"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="209dp"
        android:text="@string/signButton" />

    <Button
        android:id="@+id/oppositeButton"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_alignTop="@+id/clearButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-2dp"
        android:layout_marginEnd="153dp"
        android:layout_marginRight="153dp"
        android:text="@string/oppositeButton" />

    <Button
        android:id="@+id/threeButton"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="271dp"
        android:text="@string/threeButton" />

    <Button
        android:id="@+id/fourButton"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginBottom="176dp"
        android:text="@string/fourButton" />

    <Button
        android:id="@+id/sevenButton"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="291dp"
        android:layout_marginRight="291dp"
        android:layout_marginBottom="118dp"
        android:text="@string/sevenButton" />

    <Button
        android:id="@+id/plusButton"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="211dp"
        android:layout_marginLeft="211dp"
        android:layout_marginTop="270dp"
        android:text="@string/plusButton" />

    <Button
        android:id="@+id/sinButton"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="269dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:text="@string/sinButton" />

    <Button
        android:id="@+id/orButton"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="269dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:enabled="false"
        android:visibility="invisible"
        android:text="@string/orButton" />


    <Button
        android:id="@+id/sqrtButton"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="79dp"
        android:layout_marginRight="79dp"
        android:layout_marginBottom="0dp"
        android:text="@string/squareButton" />

    <Button
        android:id="@+id/divisionButton"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="448dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/divisionButton" />

    <Button
        android:id="@+id/tgButton"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="451dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:text="@string/tgButton" />


    <Button
        android:id="@+id/andButton"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="451dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:enabled="false"
        android:visibility="invisible"
        android:text="@string/andButton" />

    <Button
        android:id="@+id/changeButton"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="507dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:text="@string/changeButton" />

    <Button
        android:id="@+id/sixButton"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="331dp"
        android:layout_marginEnd="152dp"
        android:layout_marginRight="152dp"
        android:text="@string/sixButton" />

    <Button
        android:id="@+id/nineButton"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="389dp"
        android:layout_marginEnd="151dp"
        android:layout_marginRight="151dp"
        android:text="@string/nineButton" />

    <Button
        android:id="@+id/fiveButton"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="330dp"
        android:text="@string/fiveButton" />


</RelativeLayout>